--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,22 +4,28 @@
   <welcome-file-list>
     <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
-  
   <servlet>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<servlet-class>hong.guo.loginServlet.LoginServlet</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.nine.servlet.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<url-pattern>/LoginServlet</url-pattern>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
-  
   <servlet>
-  	<servlet-name>RegistServlet</servlet-name>
-  	<servlet-class>hong.guo.loginServlet.RegistServlet</servlet-class>
+    <servlet-name>RegistServlet</servlet-name>
+    <servlet-class>com.nine.servlet.RegistServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>RegistServlet</servlet-name>
-  	<url-pattern>/RegistServlet</url-pattern>
+    <servlet-name>RegistServlet</servlet-name>
+    <url-pattern>/RegistServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UserpageServlet</servlet-name>
+    <servlet-class>com.nine.servlet.UserpageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserpageServlet</servlet-name>
+    <url-pattern>/UserpageServlet</url-pattern>
   </servlet-mapping>
 </web-app>
