--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,6 +14,15 @@
     
   </servlet-mapping>
   <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>com.nine.servlet.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logoutServlet</url-pattern>
+    
+  </servlet-mapping>
+  <servlet>
     <servlet-name>UserpageServlet</servlet-name>
     <servlet-class>com.nine.servlet.UserpageServlet</servlet-class>
   </servlet>
