--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>periodicalWeb_my</display-name>
+  <display-name>myLogin</display-name>
   <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
+    <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
@@ -10,17 +10,15 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login/*</url-pattern>
-    
+    <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>LogoutServlet</servlet-name>
-    <servlet-class>com.nine.servlet.LogoutServlet</servlet-class>
+    <servlet-name>RegistServlet</servlet-name>
+    <servlet-class>com.nine.servlet.RegistServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>LogoutServlet</servlet-name>
-    <url-pattern>/logoutServlet</url-pattern>
-    
+    <servlet-name>RegistServlet</servlet-name>
+    <url-pattern>/RegistServlet</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>UserpageServlet</servlet-name>
@@ -28,14 +26,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>UserpageServlet</servlet-name>
-    <url-pattern>/user/*</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>ManagerpageServlet</servlet-name>
-    <servlet-class>com.nine.servlet.ManagerpageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ManagerpageServlet</servlet-name>
-    <url-pattern>/manager/*</url-pattern>
+    <url-pattern>*.php</url-pattern>
   </servlet-mapping>
 </web-app>
