--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>periodicalWeb_my</display-name>
+  <!-- 首页 -->
   <welcome-file-list>
     <welcome-file>login.html</welcome-file>
   </welcome-file-list>
+  <!-- filter -->
+  <!-- 统一编码的filter -->
+  <filter>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>com.nine.filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>EncodingFilter</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping>
+  <!-- 防止sql的filter 
+  <filter>
+    <filter-name>SqlFilter</filter-name>
+    <filter-class>com.nine.filter.SqlFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>SqlFilter</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping> -->
+  <!-- 防止直接输入url进入的filter -->
+  <filter>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>com.nine.filter.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping>
+  <!-- 获得连接到数据库类型和数据库名 -->
+  <servlet>
+    <servlet-name>InitServlet</servlet-name>
+    <servlet-class>com.nine.servlet.InitServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <!-- 本项目要链接到数据库类型 -->
+  <context-param>
+    <param-name>sql_dialect</param-name>
+    <param-value>mysql</param-value>
+  </context-param>
+  <!-- 本项目要链接到数据库名 -->
+  <context-param>
+    <param-name>data_source</param-name>
+    <param-value>jichen</param-value>
+  </context-param>
+  <!-- 登录控制的servlet -->
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.nine.servlet.LoginServlet</servlet-class>
@@ -11,9 +57,8 @@
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login/*</url-pattern>
-    
   </servlet-mapping>
-  
+  <!-- 退出登录的servlet -->
   <servlet>
     <servlet-name>LogoutServlet</servlet-name>
     <servlet-class>com.nine.servlet.LogoutServlet</servlet-class>
@@ -21,9 +66,8 @@
   <servlet-mapping>
     <servlet-name>LogoutServlet</servlet-name>
     <url-pattern>/logoutServlet</url-pattern>
-    
   </servlet-mapping>
-  
+  <!-- 用户界面相关控制的servlet -->
   <servlet>
     <servlet-name>UserpageServlet</servlet-name>
     <servlet-class>com.nine.servlet.UserpageServlet</servlet-class>
@@ -32,6 +76,7 @@
     <servlet-name>UserpageServlet</servlet-name>
     <url-pattern>/user/*</url-pattern>
   </servlet-mapping>
+  <!-- 管理员界面相关控制的servlet -->
   <servlet>
     <servlet-name>ManagerpageServlet</servlet-name>
     <servlet-class>com.nine.servlet.ManagerpageServlet</servlet-class>
